	(PokerAvatarTestCase.fullQuit): Wrote function.
	(PokerAvatarTestCase.test58_packetLogoutSucceed): Wrote function.
	(PokerAvatarTestCase.doLogout): Wrote function.
	(PokerAvatarTestCase.tourneySelect): Fixed total for expected
	tourneys.  This should probably be changed -- why do we have so
	many test-created sitngo's?
	(PokerAvatarTestCase.test59_packetLogoutFailed): Wrote function.

2008-03-24  Loic Dachary <loic@dachary.org>
	* Release 1.5.0

	* NEWS, conf/poker.bot.xml.in, conf/poker.client.xml.in,
	  conf/poker.server.xml.in, debian/changelog,
	  examples/poker.bot.xml, examples/poker.server-monotone.xml,
	  examples/poker.server.xml, pokerclient2d/poker2d.xml.in,
	  pokernetwork/__init__.py, tests/conf/poker.client.xml.in: bump to
	  version 1.5.0
	* pokernetwork/pokerservice.py, tests/test-webservice.py.in:
	  implement JSONP and custom session names

2008-03-20  Loic Dachary <loic@dachary.org>

	* Release 1.4.0

	* database/schema.sql.in: Do not create many tournaments by
	  default. A sitngo and a regular tournament are enough.
	* tests/conf/poker.client.xml.in: version 1.4.0
	* tests/test-webservice.py.in: - twisted-2.5 ports
	  - normalize "no sessions"
	  - tests for session=clear session=new on REST API
	  - tests for jsonp on REST API
	* COPYING + *: GPLv3+ upgrade
	* tests/test-pokeravatar.py.in: Only two tournaments by default.
	* pokernetwork/pokerservice.py: Split the from zope.interface
	  import to avoid python warnings.
	  Fix cookie session comment for clarity.
	  HTTP based protocols conversion from packets to result are given
	  the request in argument. To detect the jsonp argument, for
	  instance.
	  Implement session clear (forget about the session) and renew
	  (clear + get another session).
	* tests/run.in: - load xdebug to enable coverage report of php code
	  - archive pydb --fntrace --basename pearl
	* tests/test-pokerservice.py.in: test16 & test17 did not return the